packages/docs/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-dare-docs
  namespace: apps
  labels:
    app: ui-dare-docs
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: ui-dare-docs
